--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-    <meta charset="utf-8">
-    <title>サンプル</title>
-    <meta name="description" content="サンプルです">
-    <link href="style.css" rel="stylesheet">
-    <!-- MapLibre -->
-    <script src='https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js'></script>
-    <link href='https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css' rel='stylesheet' />
-</head>
-<body>
-    <div id="map"></div>
-    <script src="main.js"></script>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <title>サンプル</title>
+        <meta name="description" content="サンプルです" />
+        <link href="style.css" rel="stylesheet" />
+        <!-- MapLibre -->
+        <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
+        <link
+            href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <div id="map"></div>
+        <button id="fly">空港にジャンプ！</button>
+        <script src="main.js"></script>
+    </body>
 </html>
