--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
         <link href="style.css" rel="stylesheet" />
         <!-- MapLibre -->
         <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
-        <link
-            href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css"
-            rel="stylesheet"
-        />
+        <link href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" rel="stylesheet" />
     </head>
     <body>
         <div id="map"></div>
+        <button id="fly">東京へジャンプ！</button>
         <script src="main.js"></script>
     </body>
 </html>
